syntax = "proto3";

import "Common.proto";
import "google/protobuf/timestamp.proto";

message PurchaseListRequest {
  CommonRequest head = 1;
  Age age = 2;
}

message PurchaseListResponse {
  CommonResponse head = 1;
  repeated ProductItem productList = 2;
  repeated Purchase purchaseList = 3;
}

message ProductItem {
  string productId = 1;
  float price = 2;
  string title = 3;
  int32 coin = 4;
  string description = 5;
  string icon = 6;
  string purchaseId = 7;
  int32 limit = 8;
}

message Purchase {
  int32 id = 1;
  string productId = 2;
  int32 count = 3;
  optional google.protobuf.Timestamp expiredate = 4;
}